* Non-existent problems can no longer be acknowledged
* Privileges will now only attempted be dropped if started as root user
* Embedded Perl fixes (to reduce memory leaks)
* Sample CGI config file fixes
* Added $HOSTCHECKTYPE$ and $SERVICECHECKTYPE$ macros
* Fixed bugs in $LASTHOSTCHECK$ macro (and corresponding on-demand macro)
* Fixed bugs in status data routines



2.0b3 - 04/03/2005
------------------
* Sample config file fixes
* Fixed segfaults in CGIs where plugin output was NULL
* Minor fixes to INSTALL documentation
* Fixed segfault with mispaired servicegroup memberships
* Added $PROCESSSTARTTIME$ macro
* If not specified, host address and alias now default to host name
* Extended ASCII characters no longer auto-stripped from object names and macros
* Added external commands to adjust host and service notification numbers
* Init script changes
* Fixed bug where passive checks with empty plugin output were being dropped
* Fixed bug in state retention routines
* Configure script changes to (hopefully) support event broker under AIX 5
* Documentation fixes and updates
* Additional MRTG output options in nagiostats utility
* Fixed bug in macro processing where commands longer than 1K in length were sometimes being truncated
* Fixed bug in initialization of servicedependency definitions
* Nagios now aborts at startup if it can't drop privileges
* Fixed segfault with adaptive monitoring when changing service check command



2.0b2 - 02/09/2005
------------------
* Fixed bug with cleaning macro contents
* Minor doc updates and fixes
* Init script mods
* Fixed bug in macro routines
* Changed library ordering in GD configure script tests
* Increased command buffer from 4K to 32K
* Added ability to report on soft problem states in avail and trends CGIs
* Fixed bug with hard service problems being reported as soft after host recoveries
* Fixed bug with current attempt number during scheduled host checks
* Fixed macro processing bug